<resources>
    <string name="app_name">My Application</string>
    <string name="hide_list">Hide list</string>
    <string name="toast">Toast</string>
    <string name="change_label_color">Change label color</string>
    <string name="new_label_text">New label text…</string>
    <string name="my_label">My Label!</string>
    <string name="main_layout">Main layout</string>
    <string name="thread_layout">Thread layout</string>
    <string name="request_layout">Request layout</string>
    <string name="show_toast">Show toast</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="minus_point" translatable="false">-1</string>
    <string name="plus_point" translatable="false">+1</string>
    <string name="ellipsis" translatable="false">…</string>
    <string name="pointsPrefKey" translatable="false">points</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="placeholder_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet commodo justo, ac consectetur nunc. Vestibulum eu magna sollicitudin, interdum lacus ut, tincidunt nulla. Praesent tristique nibh vitae lectus mollis, non hendrerit mi ullamcorper. Cras rhoncus ante ac neque hendrerit fermentum. Donec consequat condimentum molestie. Fusce commodo eros eget ligula rhoncus commodo. Aenean sit amet dapibus justo.</string>
    <string name="naturalButtonText" translatable="false">Nat</string>
    <string name="fibonacciButtonText" translatable="false">Fib</string>
    <string name="collatzButtonText" translatable="false">Col</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_snackbar">Hello Snackbar</string>
    <string name="run_threads">Run</string>
    <string name="stop_threads">Stop</string>
    <string name="reset_threads">Reset</string>
    <string name="minus50" translatable="false">-50</string>
    <string name="plus50" translatable="false">+50</string>
    <string name="some_ms">%1$d ms</string>
    <string name="open_in_eshop">Open in eShop</string>
    <string name="get_another_game">Get another game</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="publisher">Publisher: %1$s</string>
    <string name="price">Price: %1$d RUB</string>
    <string name="no_internet_connection">Failed</string>
    <string name="no_connection_to_server">Something went wrong</string>
    <string-array name="names">
        <item>Hello</item>
        <item>World</item>
        <item>Universe</item>
        <item>Android</item>
        <item>iOS</item>
        <item>Hotel?</item>
        <item>Trivago!</item>
    </string-array>
</resources>